77. Spring Boot - Spring Data REST - Real-Time Project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
 logging.level.root=info
+
+#
+# Spring Data REST
+#
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=20
